--- a/Assets/CustomAssets/PdfGenerator/CombinedProcessing.ipynb
+++ b/Assets/CustomAssets/PdfGenerator/CombinedProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "12455c6e",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "# Initializing stuff\n",
-    "path_to_wkhtmltopdf = r'../../wkhtmltopdf/bin/wkhtmltopdf.exe'\n",
+    "path_to_wkhtmltopdf = r'./wkhtmltopdf/bin/wkhtmltopdf.exe'\n",
     "\n",
     "config = pdfkit.configuration(wkhtmltopdf=path_to_wkhtmltopdf)\n",
     "\n",
@@ -43,8 +43,8 @@
     "    'margin-right': '1in'\n",
     "}\n",
     "\n",
-    "temp_pdf_path = \"temp.pdf\"\n",
-    "final_pdf_path = \"output.pdf\""
+    "temp_pdf_path = \"./CacheData/temp.pdf\"\n",
+    "final_pdf_path = \"./CacheData/output.pdf\""
    ]
   },
   {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "591a112f",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
     "    # Fetch the corresponding QR code image and AR marker\n",
     "    qr_filename = \"{}.png\".format(i)\n",
     "    qr_path = os.path.join(uid_folder_path, qr_filename)\n",
-    "    ar_marker_path = '../_ARMarker/Markers/MarkerIcons03.png'\n",
+    "    ar_marker_path = '../../_ARMarker/Markers/MarkerIcons03.png'\n",
     "    with open(ar_marker_path, 'rb') as marker_file:\n",
     "        marker_data = marker_file.read()\n",
     "        marker_base64 = base64.b64encode(marker_data).decode('utf-8')\n",
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "77bdc7c6",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "4392c425",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ar_marker_coordinates': [256.86151123046875, 180.01199340820312, 338.4886779785156, 258.0379638671875], 'pages': [{'hyperlinks': [{'id': '6640b6c6ad19ca34f8684601', 'uri': 'https://everyday-reading.com/book-logging/', 'coordinates': [361.5, 148.5, 408.75, 156.0]}, {'id': '6640b6c7acd3cb34a846bc16', 'uri': 'https://everyday-reading.com/', 'coordinates': [93.75, 180.0, 499.5, 258.0]}, {'id': '6640b6c7e41b4d34e4f2914c', 'uri': 'https://everyday-reading.com/about', 'coordinates': [72.0, 144.0, 72.0, 144.0]}]}, {'hyperlinks': [{'id': '6640b6c8ad19ca34f8684603', 'uri': '', 'coordinates': [144.75, 559.5, 252.75, 567.75]}, {'id': '6640b6c9acd3cb34a846bc19', 'uri': '', 'coordinates': [78.0, 654.75, 99.75, 664.5]}, {'id': '6640b6c9acd3cb34a846bc1b', 'uri': '', 'coordinates': [144.75, 699.0, 252.75, 707.25]}, {'id': '6640b6cae41b4d34e4f2914f', 'uri': 'https://www.facebook.com/sharer/sharer.php?u=https%253A%252F%252Feveryday-reading.com%252Fblog-reading%252F&t=Blog%20Reading', 'coordinates': [78.0, 423.0, 78.0, 423.0]}, {'id': '6640b6caacd3cb34a846bc1d', 'uri': 'https://x.com/intent/tweet?text=Blog%20Reading&url=https%253A%252F%252Feveryday-reading.com%252Fblog-reading%252F', 'coordinates': [212.25, 423.0, 212.25, 423.0]}, {'id': '6640b6cbe41b4d34e4f29151', 'uri': 'https://everyday-reading.com/nickel-and-dimed-on-not-getting-by-in/', 'coordinates': [90.0, 458.25, 270.75, 485.25]}, {'id': '6640b6cbad19ca34f8684608', 'uri': 'https://everyday-reading.com/saturday-is-special-day/', 'coordinates': [408.0, 458.25, 504.0, 467.25]}]}, {'hyperlinks': [{'id': '6640b6cce41b4d34e4f29154', 'uri': '', 'coordinates': [78.0, 168.0, 99.75, 177.75]}, {'id': '6640b6cdacd3cb34a846bc22', 'uri': '', 'coordinates': [144.75, 212.25, 265.5, 220.5]}, {'id': '6640b6cdacd3cb34a846bc24', 'uri': '', 'coordinates': [78.0, 324.75, 99.75, 334.5]}, {'id': '6640b6ceacd3cb34a846bc26', 'uri': '', 'coordinates': [144.75, 369.0, 268.5, 377.25]}, {'id': '6640b6cead19ca34f8684610', 'uri': '', 'coordinates': [78.0, 464.25, 99.75, 474.0]}, {'id': '6640b6cfe41b4d34e4f29159', 'uri': '', 'coordinates': [144.75, 508.5, 273.75, 516.75]}, {'id': '6640b6cfacd3cb34a846bc2a', 'uri': '', 'coordinates': [78.0, 603.75, 99.75, 613.5]}, {'id': '6640b6d0e41b4d34e4f2915c', 'uri': '', 'coordinates': [144.75, 648.0, 244.5, 656.25]}, {'id': '6640b6d0e41b4d34e4f2915e', 'uri': 'https://raniiajenay.blogspot.com/', 'coordinates': [144.75, 495.0, 201.75, 503.25]}]}, {'hyperlinks': [{'id': '6640b6d1ad19ca34f8684612', 'uri': '', 'coordinates': [78.0, 147.0, 99.75, 156.75]}, {'id': '6640b6d2acd3cb34a846bc2e', 'uri': '', 'coordinates': [174.75, 192.0, 276.0, 200.25]}, {'id': '6640b6d2ad19ca34f8684614', 'uri': '', 'coordinates': [108.0, 286.5, 129.75, 296.25]}, {'id': '6640b6d3e41b4d34e4f29162', 'uri': '', 'coordinates': [144.75, 330.75, 253.5, 339.0]}, {'id': '6640b6d3e41b4d34e4f29164', 'uri': '', 'coordinates': [78.0, 426.0, 99.75, 435.75]}, {'id': '6640b6d4ad19ca34f8684616', 'uri': 'https://everyday-reading.com', 'coordinates': [174.75, 178.5, 258.75, 186.75]}]}, {'hyperlinks': [{'id': '6640b6d5e41b4d34e4f29167', 'uri': 'https://facebook.com/everydayreadingblog', 'coordinates': [254.25, 618.75, 270.0, 634.5]}, {'id': '6640b6d5acd3cb34a846bc32', 'uri': 'https://instagram.com/everydayreading', 'coordinates': [277.5, 618.75, 293.25, 634.5]}, {'id': '6640b6d6e41b4d34e4f29169', 'uri': 'https://www.pinterest.com/everydayreading/', 'coordinates': [300.75, 618.75, 316.5, 634.5]}, {'id': '6640b6d6ad19ca34f868461b', 'uri': 'https://twitter.com/everydayreading', 'coordinates': [324.0, 618.75, 339.75, 634.5]}]}, {'hyperlinks': [{'id': '6640b6d7acd3cb34a846bc35', 'uri': 'https://www.instagram.com/reel/C6yobp1rzuW/', 'coordinates': [78.0, 276.75, 516.0, 276.75]}, {'id': '6640b6d8ad19ca34f868461d', 'uri': 'https://www.instagram.com/reel/C6xQFhjxv7t/', 'coordinates': [78.0, 294.75, 516.0, 294.75]}, {'id': '6640b6d8ad19ca34f868461f', 'uri': 'https://www.instagram.com/reel/C6v-Z3WrO78/', 'coordinates': [78.0, 312.75, 516.0, 312.75]}, {'id': '6640b6d9acd3cb34a846bc38', 'uri': 'https://www.instagram.com/reel/C6urCBFRGMF/', 'coordinates': [78.0, 330.75, 516.0, 330.75]}, {'id': '6640b6d9acd3cb34a846bc3a', 'uri': 'https://www.instagram.com/reel/C6tUYImL5p8/', 'coordinates': [78.0, 348.75, 516.0, 348.75]}, {'id': '6640b6daad19ca34f8684622', 'uri': 'https://www.instagram.com/reel/C6pjoN1R8yL/', 'coordinates': [78.0, 366.75, 516.0, 366.75]}, {'id': '6640b6daad19ca34f8684624', 'uri': 'https://www.instagram.com/reel/C6oLPEIrqnE/', 'coordinates': [78.0, 384.75, 516.0, 384.75]}, {'id': '6640b6dbe41b4d34e4f2916d', 'uri': 'https://www.instagram.com/reel/C6hzjdFxa6R/', 'coordinates': [78.0, 402.75, 516.0, 402.75]}, {'id': '6640b6dbe41b4d34e4f2916f', 'uri': 'https://www.instagram.com/reel/C6geDmSLr77/', 'coordinates': [78.0, 420.75, 516.0, 420.75]}, {'id': '6640b6dcacd3cb34a846bc3d', 'uri': 'http://restored316designs.com/themes', 'coordinates': [207.0, 450.75, 282.75, 457.5]}, {'id': '6640b6dcad19ca34f8684628', 'uri': 'https://www.studiopress.com/', 'coordinates': [297.0, 450.75, 378.75, 457.5]}, {'id': '6640b6dde41b4d34e4f29171', 'uri': 'https://wordpress.org/', 'coordinates': [386.25, 450.75, 433.5, 457.5]}, {'id': '6640b6deacd3cb34a846bc3f', 'uri': 'https://everyday-reading.com/wp-login.php', 'coordinates': [440.25, 450.75, 465.0, 457.5]}]}]}\n"
+      "Executing create_data...\n",
+      "Success.\n",
+      "Executing update_data...\n",
+      "Success.\n",
+      "{'ar_marker_coordinates': [256.86151123046875, 180.01199340820312, 338.4886779785156, 258.0379638671875], 'pages': [{'hyperlinks': [{'id': '6640d18aacd3cb34a846c78f-0', 'uri': 'https://everyday-reading.com/book-logging/', 'coordinates': [361.5, 148.5, 408.75, 156.0]}, {'id': '6640d18aacd3cb34a846c78f-1', 'uri': 'https://everyday-reading.com/', 'coordinates': [93.75, 180.0, 499.5, 258.0]}, {'id': '6640d18aacd3cb34a846c78f-2', 'uri': 'https://everyday-reading.com/about', 'coordinates': [72.0, 144.0, 72.0, 144.0]}]}, {'hyperlinks': [{'id': '6640d18aacd3cb34a846c78f-3', 'uri': '', 'coordinates': [144.75, 559.5, 252.75, 567.75]}, {'id': '6640d18aacd3cb34a846c78f-4', 'uri': '', 'coordinates': [78.0, 654.75, 99.75, 664.5]}, {'id': '6640d18aacd3cb34a846c78f-5', 'uri': '', 'coordinates': [144.75, 699.0, 252.75, 707.25]}, {'id': '6640d18aacd3cb34a846c78f-6', 'uri': 'https://www.facebook.com/sharer/sharer.php?u=https%253A%252F%252Feveryday-reading.com%252Fblog-reading%252F&t=Blog%20Reading', 'coordinates': [78.0, 423.0, 78.0, 423.0]}, {'id': '6640d18aacd3cb34a846c78f-7', 'uri': 'https://x.com/intent/tweet?text=Blog%20Reading&url=https%253A%252F%252Feveryday-reading.com%252Fblog-reading%252F', 'coordinates': [212.25, 423.0, 212.25, 423.0]}, {'id': '6640d18aacd3cb34a846c78f-8', 'uri': 'https://everyday-reading.com/nickel-and-dimed-on-not-getting-by-in/', 'coordinates': [90.0, 458.25, 270.75, 485.25]}, {'id': '6640d18aacd3cb34a846c78f-9', 'uri': 'https://everyday-reading.com/saturday-is-special-day/', 'coordinates': [408.0, 458.25, 504.0, 467.25]}]}, {'hyperlinks': [{'id': '6640d18aacd3cb34a846c78f-10', 'uri': '', 'coordinates': [78.0, 168.0, 99.75, 177.75]}, {'id': '6640d18aacd3cb34a846c78f-11', 'uri': '', 'coordinates': [144.75, 212.25, 265.5, 220.5]}, {'id': '6640d18aacd3cb34a846c78f-12', 'uri': '', 'coordinates': [78.0, 324.75, 99.75, 334.5]}, {'id': '6640d18aacd3cb34a846c78f-13', 'uri': '', 'coordinates': [144.75, 369.0, 268.5, 377.25]}, {'id': '6640d18aacd3cb34a846c78f-14', 'uri': '', 'coordinates': [78.0, 464.25, 99.75, 474.0]}, {'id': '6640d18aacd3cb34a846c78f-15', 'uri': '', 'coordinates': [144.75, 508.5, 273.75, 516.75]}, {'id': '6640d18aacd3cb34a846c78f-16', 'uri': '', 'coordinates': [78.0, 603.75, 99.75, 613.5]}, {'id': '6640d18aacd3cb34a846c78f-17', 'uri': '', 'coordinates': [144.75, 648.0, 244.5, 656.25]}, {'id': '6640d18aacd3cb34a846c78f-18', 'uri': 'https://raniiajenay.blogspot.com/', 'coordinates': [144.75, 495.0, 201.75, 503.25]}]}, {'hyperlinks': [{'id': '6640d18aacd3cb34a846c78f-19', 'uri': '', 'coordinates': [78.0, 147.0, 99.75, 156.75]}, {'id': '6640d18aacd3cb34a846c78f-20', 'uri': '', 'coordinates': [174.75, 192.0, 276.0, 200.25]}, {'id': '6640d18aacd3cb34a846c78f-21', 'uri': '', 'coordinates': [108.0, 286.5, 129.75, 296.25]}, {'id': '6640d18aacd3cb34a846c78f-22', 'uri': '', 'coordinates': [144.75, 330.75, 253.5, 339.0]}, {'id': '6640d18aacd3cb34a846c78f-23', 'uri': '', 'coordinates': [78.0, 426.0, 99.75, 435.75]}, {'id': '6640d18aacd3cb34a846c78f-24', 'uri': 'https://everyday-reading.com', 'coordinates': [174.75, 178.5, 258.75, 186.75]}]}, {'hyperlinks': [{'id': '6640d18aacd3cb34a846c78f-25', 'uri': 'https://facebook.com/everydayreadingblog', 'coordinates': [254.25, 618.75, 270.0, 634.5]}, {'id': '6640d18aacd3cb34a846c78f-26', 'uri': 'https://instagram.com/everydayreading', 'coordinates': [277.5, 618.75, 293.25, 634.5]}, {'id': '6640d18aacd3cb34a846c78f-27', 'uri': 'https://www.pinterest.com/everydayreading/', 'coordinates': [300.75, 618.75, 316.5, 634.5]}, {'id': '6640d18aacd3cb34a846c78f-28', 'uri': 'https://twitter.com/everydayreading', 'coordinates': [324.0, 618.75, 339.75, 634.5]}]}, {'hyperlinks': [{'id': '6640d18aacd3cb34a846c78f-29', 'uri': 'https://www.instagram.com/reel/C6yobp1rzuW/', 'coordinates': [78.0, 276.75, 516.0, 276.75]}, {'id': '6640d18aacd3cb34a846c78f-30', 'uri': 'https://www.instagram.com/reel/C6xQFhjxv7t/', 'coordinates': [78.0, 294.75, 516.0, 294.75]}, {'id': '6640d18aacd3cb34a846c78f-31', 'uri': 'https://www.instagram.com/reel/C6v-Z3WrO78/', 'coordinates': [78.0, 312.75, 516.0, 312.75]}, {'id': '6640d18aacd3cb34a846c78f-32', 'uri': 'https://www.instagram.com/reel/C6urCBFRGMF/', 'coordinates': [78.0, 330.75, 516.0, 330.75]}, {'id': '6640d18aacd3cb34a846c78f-33', 'uri': 'https://www.instagram.com/reel/C6tUYImL5p8/', 'coordinates': [78.0, 348.75, 516.0, 348.75]}, {'id': '6640d18aacd3cb34a846c78f-34', 'uri': 'https://www.instagram.com/reel/C6pjoN1R8yL/', 'coordinates': [78.0, 366.75, 516.0, 366.75]}, {'id': '6640d18aacd3cb34a846c78f-35', 'uri': 'https://www.instagram.com/reel/C6oLPEIrqnE/', 'coordinates': [78.0, 384.75, 516.0, 384.75]}, {'id': '6640d18aacd3cb34a846c78f-36', 'uri': 'https://www.instagram.com/reel/C6hzjdFxa6R/', 'coordinates': [78.0, 402.75, 516.0, 402.75]}, {'id': '6640d18aacd3cb34a846c78f-37', 'uri': 'https://www.instagram.com/reel/C6geDmSLr77/', 'coordinates': [78.0, 420.75, 516.0, 420.75]}, {'id': '6640d18aacd3cb34a846c78f-38', 'uri': 'http://restored316designs.com/themes', 'coordinates': [207.0, 450.75, 282.75, 457.5]}, {'id': '6640d18aacd3cb34a846c78f-39', 'uri': 'https://www.studiopress.com/', 'coordinates': [297.0, 450.75, 378.75, 457.5]}, {'id': '6640d18aacd3cb34a846c78f-40', 'uri': 'https://wordpress.org/', 'coordinates': [386.25, 450.75, 433.5, 457.5]}, {'id': '6640d18aacd3cb34a846c78f-41', 'uri': 'https://everyday-reading.com/wp-login.php', 'coordinates': [440.25, 450.75, 465.0, 457.5]}]}]}\n"
      ]
     }
    ],
@@ -340,6 +344,8 @@
     "\n",
     "# Get the total page count\n",
     "total_pages = doc.page_count\n",
+    "item_count = 0\n",
+    "hyperlink_id = create_data()\n",
     "\n",
     "for page_idx in range(total_pages):\n",
     "    cur_page = doc.load_page(page_idx)\n",
@@ -352,165 +358,18 @@
     "        x0, y0, x1, y1 = item['from']\n",
     "        coordinates = [round(coord, 5) for coord in [x0, y0, x1, y1]]\n",
     "        uri = item.get('uri', '')\n",
-    "        hyperlink_id = create_data()\n",
-    "        hyperlink = {'id': hyperlink_id, 'uri': uri, 'coordinates': coordinates}\n",
+    "        hyperlink = {'id': hyperlink_id + \"-\" + str(item_count), 'uri': uri, 'coordinates': coordinates}\n",
     "        hyperlinks.append(hyperlink)\n",
+    "        item_count += 1\n",
     "\n",
     "    # Create the final dictionary\n",
     "    json_data['pages'].append({\"hyperlinks\": hyperlinks})\n",
-    "    update_data(bin_id=hyperlink_id, json_data=json_data)\n",
+    "\n",
+    "update_data(bin_id=hyperlink_id, json_data=json_data)\n",
     "# Print the result\n",
     "print(json_data)\n",
     "\n",
     "doc.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83c96e89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Authentication\n",
-    "with open('access.txt', 'r') as file:\n",
-    "    access_token = file.read().strip()\n",
-    "github = Github(access_token)\n",
-    "\n",
-    "\n",
-    "# Get the repository\n",
-    "repo = github.get_repo('mumblesim/testingjson')\n",
-    "\n",
-    "\n",
-    "\n",
-    "# File content\n",
-    "file_content = json_data\n",
-    "new_json_string = json.dumps(file_content)\n",
-    "\n",
-    "# File path and name\n",
-    "file_path = 'servertest.json'\n",
-    "\n",
-    "# Update the file\n",
-    "try:\n",
-    "    # Get the existing file\n",
-    "    existing_file = repo.get_contents(file_path)\n",
-    "    # Read the existing file content and parse as JSON\n",
-    "    existing_content = json.loads(base64.b64decode(existing_file.content).decode(\"utf-8\"))\n",
-    "except Exception as e:\n",
-    "    # Initialize existing content as an empty list if file is empty or doesn't exist\n",
-    "    existing_content = []\n",
-    "\n",
-    "# Append the new JSON data to existing data\n",
-    "existing_content.append(file_content)\n",
-    "\n",
-    "# Convert updated data to JSON string\n",
-    "updated_content = json.dumps(existing_content)\n",
-    "\n",
-    "repo.update_file(file_path, \"Added entry\", updated_content, existing_file.sha if existing_file else None)\n",
-    "print(\"File updated successfully.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df9084d7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3402b467",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2ef4100",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a479f8e7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0721a1ab",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3d9c2ac",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "816712af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# OLD CODE - Overlay the QR and AR markers on each page\n",
-    "\n",
-    "# path_to_qr = 'qr_smol.png'  \n",
-    "# path_to_marker = 'ARMarker.png' \n",
-    "\n",
-    "# # Convert the first .png image to a base64-encoded string\n",
-    "# with open(path_to_qr, 'rb') as image_file:\n",
-    "#     image_data = image_file.read()\n",
-    "#     image_base64 = base64.b64encode(image_data).decode('utf-8')\n",
-    "\n",
-    "# # Convert the second .png image to a base64-encoded string\n",
-    "# with open(path_to_marker, 'rb') as marker_file:\n",
-    "#     marker_data = marker_file.read()\n",
-    "#     marker_base64 = base64.b64encode(marker_data).decode('utf-8')\n",
-    "\n",
-    "# # Create a PDF page from the PNG images\n",
-    "# image_pdf_path = 'image_page.pdf'\n",
-    "# c = canvas.Canvas(image_pdf_path, pagesize=letter)\n",
-    "\n",
-    "# # Draw the AR marker\n",
-    "# c.drawImage(\"data:image/png;base64,\" + marker_base64, 205, 710, width=80, height=80)\n",
-    "\n",
-    "# # Draw the QR code\n",
-    "# c.drawImage(\"data:image/png;base64,\" + image_base64, 295, 700, width=100, height=100)\n",
-    "\n",
-    "# c.save()\n",
-    "\n",
-    "# image_pdf_reader = PdfReader(image_pdf_path)\n",
-    "\n",
-    "# # Overlay the image page on each page of the original PDF\n",
-    "# for i in range(len(pdf_reader.pages)):\n",
-    "#     page = pdf_reader.pages[i]\n",
-    "#     image_page = image_pdf_reader.pages[0]\n",
-    "    \n",
-    "#     page.merge_page(image_page)\n",
-    "    \n",
-    "#     pdf_writer.add_page(page)\n",
-    "\n",
-    "# # Step 4: Save the modified PDF with the overlayed images\n",
-    "# with open(final_pdf_path, 'wb') as output_pdf:\n",
-    "#     pdf_writer.write(output_pdf)\n",
-    "\n",
-    "\n",
-    "# # Remove temporary files\n",
-    "# os.remove(image_pdf_path)\n",
-    "# os.remove(temp_pdf_path)"
    ]
   }
  ],
